# LLMBuilder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  INSTALL_TESSERACT.md  INTEGRATION_SUMMARY.md  MANIFEST.in  README.md  USAGE.md  config.json  config_cpu_small.json  config_gpu.json  config_manager.py  demo_enhanced_cli.py  fix_vocab_mismatch.py  inference.py  inference_fixed.py  mkdocs.yml  pyproject.toml  pytest.ini  quantize_model.py  requirements-dev.txt  requirements.txt  run.bat  run.ps1  run.sh  run_tests.py  test_package.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: test.yml
data/: README_INGESTION.md  SOURCES.md  __init__.py  dedup.py  download_data.py  ingest.py
data/deduped/: (ISC)2 CC_cleaned.txt  1.1 Understand the Security Concepts of Information Assurance_cleaned.txt  1.2 Understand The Risk Management Process_cleaned.txt  1.3 Understand Security Controls_cleaned.txt  1.4 Understand Governance Elements and Processes_cleaned.txt  1.5 Understand ISC2 Code of Ethics_cleaned.txt  2.1 Understand Incident Report_cleaned.txt  2.2 Understand Business Continuity_cleaned.txt  2.3 Understand Disaster Recovery_cleaned.txt  3.1 Understand Access Control Concepts_cleaned.txt  3.2 Understand Physical Access Control_cleaned.txt  3.3 Understand Logical Access Control_cleaned.txt  4.1 Understand Computer Networking_cleaned.txt  4.2 Understand Network (cyber) threats and attacks_cleaned.txt  4.3 Understand Network  Security Infrastructure_cleaned.txt  5.1 Understand Data Security_cleaned.txt  5.2 Understand System Hardening_cleaned.txt  5.3 Understand Best Practice Security Policies_cleaned.txt  5.4 Understand Security Awareness Training_cleaned.txt  D1 - Security Principles_cleaned.txt  D2 - Incident Response, Business Continuity and Disaster Recovery Concepts_cleaned.txt  D3 - Access Control Concepts_cleaned.txt  D4 - Network Security_cleaned.txt  D5 - Security Operations_cleaned.txt  Domain 0-0 introduction_cleaned.txt  Lesson 01 - Course Introduction_cleaned.txt  Lesson 02 - Introduction to Linux_cleaned.txt  Lesson 03 - Ubuntu_cleaned.txt  Lesson 04 - Ubuntu Dashboard_cleaned.txt  Lesson 05 - File System Organization_cleaned.txt  Lesson 06 - Introduction to CLI_cleaned.txt  Lesson 07 - Editing Text Files and Search Patterns_cleaned.txt  Lesson 08 - Package Management_cleaned.txt  Lesson 1 - Course Introduction_cleaned.txt  Lesson 2 - CyberSecurity Fundamentals_cleaned.txt  Lesson 3 - Secure Enterprise Architecture and Component_cleaned.txt  Lesson 4 - Information System Governance and Risk Assessment_cleaned.txt  Lesson 5-1_Policies_and_Procedures_cleaned.txt  Lesson 5-2_Safety_Practices_cleaned.txt  Lesson 5-3_Install_and_Configure_Equipment_cleaned.txt  (+44 more)
debug_scripts/: debug_loader.py  debug_timestamps.py  debug_training.py
docs/: README.md  index.md
docs/development/: setup.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: faq.md
docs/user-guide/: configuration.md  data-processing.md  export.md  fine-tuning.md  generation.md  tokenization.md  training.md
eval/: __init__.py  eval.py
examples/: README.md
exports/tokenizer/: tokenizer.model  tokenizer.vocab
finetune/: __init__.py  finetune.py  peft_config.py  peft_model_utils.py  peft_model_wrapper.py
llmbuilder/: __init__.py  __main__.py  cli.py
llmbuilder/cli/: __init__.py  config.py  data.py  deploy.py  eval.py  fast_main.py  help.py  inference.py  init.py  main.py  migrate.py  model.py  monitor.py  optimize.py  pipeline.py  tools.py  train.py  ultra_fast.py  upgrade.py  vocab.py
llmbuilder/compat/: __init__.py  config_migration.py  deprecation.py  legacy_imports.py  project_migrator.py  script_wrapper.py
llmbuilder/core/: __init__.py
llmbuilder/utils/: __init__.py  colors.py  config.py  error_handler.py  import_cache.py  interactive.py  lazy_imports.py  logging.py  progress.py  project.py  status.py  template_manager.py  usage_analytics.py  vocab_sync.py  workflow.py
model/: __init__.py  gpt_model.py  simple_transformer.py
scripts/: auto_fix_vocab.py  build_package.py  cleanup_warnings.py  enhanced_pdf_cleaner.py  enhanced_preprocess.py  final_qa.py  fix_package_issues.py  install.py  integrated_pipeline.py  optimize_performance.py  production_monitor.py  release.py  run_ingestion.py  test_deduplication.py  test_distribution.py  train_sentencepiece.py  validate_config.py  verify_package.py
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
templates/: model_card_template.md
tests/: README.md  conftest.py  run_comprehensive_tests.py  test_advanced_cleaning_core.py  test_advanced_cleaning_integration.py  test_backward_compatibility.py  test_basic.py  test_boilerplate_remover.py  test_cli_inference.py  test_cli_optimize.py  test_cli_tools.py  test_conversion_pipeline.py  test_deduplication_pipeline.py  test_embedding_deduplicator.py  test_epub_extractor.py  test_epub_real.py  test_gguf_converter.py  test_hash_deduplicator.py  test_help_system.py  test_html_extractor.py  test_ingestion.py  test_integration.py  test_language_filter.py  test_pdf_extractor.py  test_peft_config.py  test_peft_model_utils.py  test_peft_model_wrapper.py  test_performance.py  test_pipeline_basic.py  test_quantization_manager.py  test_sentencepiece_cli.py  test_simple_pipeline.py  test_tokenizer_config.py  test_tokenizer_trainer.py  test_tool_registry.py  test_tool_validator.py  validate_test_suite.py
tests/fixtures/: __init__.py  test_data.py
tests/integration/: __init__.py  test_cli_integration.py  test_cli_workflows.py  test_final_integration.py  test_full_pipeline.py
tools/: __init__.py  analyze_data.ps1  analyze_data.sh  calculate_raw_size.ps1  calculate_raw_size.sh  conversion_pipeline.py  download_hf_model.py  export_gguf.py  generate_model_card.py  quantization_manager.py
training/: __init__.py  config.yaml  dataset.py  finetune.py  preprocess.py  quantization.py  tokenize_corpus.py  train.py  train_tokenizer.py  utils.py
(+82 files in other folders)
